.tanzu/config/k8sGatewayRoutes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: spring-m-2-route
  annotations:
    healthcheck.gslb.tanzu.vmware.com/service: spring-m-2
    healthcheck.gslb.tanzu.vmware.com/path: /
    healthcheck.gslb.tanzu.vmware.com/port: "8080"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default-gateway
      sectionName: http-spring-m-2
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: spring-m-2
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
